--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -30,6 +30,11 @@
     <tr>
     <td><h3><strong>2024 Season</strong></h3></td> 
     </tr>
+
+  <tr>
+      <td><em>12/5/2023</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade their <strong>2024 8th round pick</strong> to the <u>Tampa Bay Pipers</u> in exchange for the remaining<strong> Tampa Bay Pipers </strong> and <strong>West Mifflin Wildcats 2024 draft picks from the 9th round through the 15th round</strong>. </td>
+    </tr>  
     
   <tr>
       <td><em>11/19/2023</em></td>
