--- a/2023teambattingstats.html
+++ b/2023teambattingstats.html
@@ -318,6 +318,23 @@
 <br>
 
 
+<h3><strong>Luken Baker</strong></h3>
+
+<table>
+  <tr>
+    <td><img src="https://www.baseball-reference.com/req/202311300/images/headshots/d/df27aef1_mlbam.jpg" alt=""></td>
+    <td>
+
+
+
+</td>
+</tr>
+</table>
+<br>
+
+    
+
+    
 <h3><strong>Edwin Rios</strong></h3>
 
 <table>
