--- a/2023teampitchingstats.html
+++ b/2023teampitchingstats.html
@@ -795,6 +795,19 @@
           <br>
 
    
+ <h3><strong>Alec Marsh</strong></h3>
+
+    <table>
+      <tr>
+        <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/8/8723f0e4_mlbam.jpg" alt=""></td>
+        <td>
+
+
+
+     </td>
+          </tr>
+          </table>
+          <br>
    
   
     <br>
