--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -171,6 +171,19 @@
     </tr>
 <br>
 
+     <tr>
+      <td>9</td>
+      <td>P</td>
+    <td>Alec Marsh</td>
+    </tr>
+<br>
+    
+ <tr>
+      <td>9</td>
+      <td>1B</td>
+    <td>Luken Baker</td>
+    </tr>
+<br>
     
   <table>
     <tr> 
