--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -184,6 +184,14 @@
     <td>Luken Baker</td>
     </tr>
 <br>
+
+ <tr>
+      <td>9</td>
+      <td>P</td>
+    <td>John McMillon</td>
+    </tr>
+<br>
+
     
   <table>
     <tr> 
