--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -192,7 +192,59 @@
     </tr>
 <br>
 
+    <tr>
+      <td>10</td>
+      <td>P</td>
+      <td>Brendan White</td>
+    </tr>
+
+     <tr>
+      <td>10</td>
+      <td>SS</td>
+      <td>Alika Williams</td>
+    </tr>
+
+  <tr>
+      <td>10</td>
+      <td>P</td>
+      <td>Sammy Peralta</td>
+    </tr>
+
+ <tr>
+      <td>11</td>
+      <td>2B</td>
+      <td>Jose Fermin</td>
+    </tr>
+
+ <tr>
+      <td>11</td>
+      <td>P</td>
+      <td>Prelander Berroa</td>
+    </tr>
+<br>
+  
+ <tr>
+      <td>11</td>
+      <td>P</td>
+    <td>Brent Headrick</td>
+    </tr>
+<br>
+
+ <tr>
+      <td>12</td>
+      <td>P</td>
+    <td>Ronel Blanco</td>
+    </tr>
+<br>
     
+ <tr>
+      <td>12</td>
+      <td>P</td>
+    <td>Jordan Balazovic</td>
+    </tr>
+<br>
+
+     
   <table>
     <tr> 
       <td><h3><strong>2023 Draft</strong></h3></td>
