--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -32,6 +32,11 @@
     </tr>
 
   <tr>
+      <td><em>12/17/2023</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>OF Aaron Judge</strong>, <strong>C Joey Bart</strong>, and <strong>P John King</strong> to the <u>Hillsboro Hitters</u> in exchange for <strong>1B Vladimir Guerrero Jr.</strong>, <strong>P Michael Kopech</strong>, and <strong>P Tanner Houck</strong>. </td>
+    </tr>  
+    
+  <tr>
       <td><em>12/5/2023</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade their <strong>2024 8th round pick</strong> to the <u>Tampa Bay Pipers</u> in exchange for the remaining<strong> Tampa Bay Pipers </strong> and <strong>West Mifflin Wildcats 2024 draft picks from the 9th round through the 15th round</strong>. </td>
     </tr>  
