--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -32,6 +32,12 @@
     </tr>
 
   <tr>
+      <td><em>12/22/2023</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Ronel Blanco</strong>, <strong>P Spenser Watkins</strong>, and <strong>3B Edwin Rios</strong> to the <u>Missouri Royals</u> in exchange for <strong>OF Joshua Palacios</strong>. </td>
+    </tr>  
+
+    
+  <tr>
       <td><em>12/17/2023</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>OF Aaron Judge</strong>, <strong>C Joey Bart</strong>, and <strong>P John King</strong> to the <u>Hillsboro Hitters</u> in exchange for <strong>1B Vladimir Guerrero Jr.</strong>, <strong>P Michael Kopech</strong>, and <strong>P Tanner Houck</strong>. </td>
     </tr>  
