--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -117,12 +117,8 @@
   <br>
   <br>
 
-  <h1><strong>Draft Results1</strong></h1>
-  <hr>
+  <h1><strong>Draft Results</strong></h1>
 
-<br>
-  <br>
-  
   <table>
     <tr> 
       <td><h3><strong>2024 Draft</strong></h3></td>
