--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -117,9 +117,11 @@
   <br>
   <br>
 
-  <h1><strong>Draft Results</strong></h1>
+  <h1><strong>Draft Results1</strong></h1>
+<hr>
+  
+<table>
 
-  <table>
     <tr> 
       <td><h3><strong>2024 Draft</strong></h3></td>
       <tr/>
