--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -32,6 +32,11 @@
     </tr>
 
   <tr>
+      <td><em>1/6/2024</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>1B Yuli Gurriel</strong> and <strong>2B Jonathan India</strong> to the <u>Susquehanna Valley Vigilantes</u> in exchange for <strong>1B Andrew Vaughn</strong> and <strong>P Joe La Sorsa</strong>. </td>
+    </tr>  
+    
+  <tr>
       <td><em>12/22/2023</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Ronel Blanco</strong>, <strong>P Spenser Watkins</strong>, and <strong>3B Edwin Rios</strong> to the <u>Missouri Royals</u> in exchange for <strong>OF Joshua Palacios</strong>. </td>
     </tr>  
