--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -32,6 +32,11 @@
     </tr>
 
   <tr>
+      <td><em>1/29/2024</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> cut <strong>P Brandon Hughes, P Daniel Hudson, P Tommy Hunter, P Diego Castillo, P Brent Headrick, P Jordan Balazovic, P Yerry De Los Santos, OF Ben Gamel, SS Luke Williams, 3B Michael Brosseau, and C Brian Serven. </strong>.</td>
+    </tr>   
+    
+  <tr>
       <td><em>1/6/2024</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>1B Yuli Gurriel</strong> and <strong>2B Jonathan India</strong> to the <u>Susquehanna Valley Vigilantes</u> in exchange for <strong>1B Andrew Vaughn</strong> and <strong>P Joe La Sorsa</strong>. </td>
     </tr>  
