--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -31,6 +31,11 @@
     <td><h3><strong>2024 Season</strong></h3></td> 
     </tr>
 
+ <tr>
+      <td><em>2/6/2024</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> add <strong>2B Vidal Brujan, C Cesar Salazar</strong> and <strong> P Frankie Montas </strong> and released <strong>OF Blake Perkins, 2B Jose Fermin </strong> and <strong> P Zach Plesac </strong> in Phase III of the TRABL Draft. </td>
+    </tr>   
+    
   <tr>
       <td><em>1/29/2024</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> cut <strong>P Brandon Hughes, P Daniel Hudson, P Tommy Hunter, P Diego Castillo, P Brent Headrick, P Jordan Balazovic, P Yerry De Los Santos, OF Ben Gamel, SS Luke Williams, 3B Michael Brosseau, and C Brian Serven. </strong>.</td>
@@ -127,7 +132,7 @@
   <br>
   <br>
 
-  <h1><strong>Draft Results1</strong></h1>
+  <h1><strong>Draft Results</strong></h1>
 <hr>
   
 <table>
