--- a/2023teampitchingstats.html
+++ b/2023teampitchingstats.html
@@ -670,14 +670,17 @@
     </tr>
     </table>
 
-   <h3><strong>Frankie Montas</strong></h3>
+    <h3><strong>Frankie Montas</strong></h3>
 
-<table>
-<tr>
-  <td><img src="https://www.baseball-reference.com/req/202402130/images/headshots/a/a654630c_mlbam.jpg" alt=""></td>
-  <td>
 
-<div class="sr_share_wrap" style="overflow:auto">
+    <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202402130/images/headshots/a/a654630c_mlbam.jpg" alt=""></td>
+      <td>
+
+
+
+ <div class="sr_share_wrap" style="overflow:auto">
 <table class="sr_share" id="" data-cols-to-freeze="1,3" style="border-collapse: collapse; font-size:.83em; border: 1px sold #aaa; overflow:auto;">
     <caption>Standard Pitching</caption>
    <colgroup><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col><col></colgroup>
@@ -723,9 +726,12 @@
 <tr><th scope="row" csk="2023" style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2023</th><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">30</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/teams/NYY/2023.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool" title="New York Yankees">NYY</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "><a href="https://www.baseball-reference.com/leagues/AL/2023.shtml?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">AL</a></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.000</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0.00</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">7</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; "></td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">4.01</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">2.250</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">13.5</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">0.0</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6.8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">6.8</td><td style="border: 1px solid #ccc; padding: 2px 3px 2px 2px; white-space: nowrap; ">1.00</td></tr>
 </tbody><tfoot>
    </tfoot>
-</table><div id="credit_pitching_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/m/montafr02.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#pitching_standard">View Original Table</a><br>Generated 2/28/2024.</div>
+</table><div id="credit_pitching_standard" class="sr_share" style="font-size: 0.83em;">Provided by <a href="https://www.sports-reference.com/sharing.html?utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool">Baseball-Reference.com</a>: <a href="https://www.baseball-reference.com/players/m/montafr02.shtml?sr&amp;utm_source=direct&amp;utm_medium=Share&amp;utm_campaign=ShareTool#pitching_standard">View Original Table</a><br>Generated 2/29/2024.</div>
 
-
+    </td>
+    </tr>
+    </table>
+    <br>
     <hr>
     <h2><strong><center>Spot Starters</center></strong></h2>
     <hr>
