--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -31,6 +31,11 @@
     <td><h3><strong>2024 Season</strong></h3></td> 
     </tr>
 
+  <tr>
+      <td><em>2/29/2024</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Bryce Elder</strong> to the <u>Springfield Schnauzers</u> in exchange for <strong>P Dinelson Lamet</strong> and their <strong>2025 2nd round pick</strong>. </td>
+    </tr> 
+    
  <tr>
       <td><em>2/6/2024</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> add <strong>2B Vidal Brujan, C Cesar Salazar</strong> and <strong> P Frankie Montas </strong> and release <strong>OF Blake Perkins, 2B Jose Fermin </strong> and <strong> P Zach Plesac </strong> in Phase III of the TRABL Draft. </td>
