--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -32,6 +32,11 @@
     </tr>
 
   <tr>
+      <td><em>7/15/2024</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>SS Amed Rosario</strong>, <strong>P Frankie Montas</strong> and their <strong>7th round pick</strong> to the <u>Silverville Rippers</u> in exchange for <strong>SS Oneil Cruz</strong> and <strong>OF Dairon Blanco</strong>. </td>
+    </tr> 
+    
+  <tr>
       <td><em>2/29/2024</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Bryce Elder</strong> to the <u>Springfield Schnauzers</u> in exchange for <strong>P Dinelson Lamet</strong> and their <strong>2025 2nd round pick</strong>. </td>
     </tr> 
