--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -27,6 +27,15 @@
   <hr>
   <table>
 
+  <tr>
+    <td><h3><strong>2025 Season</strong></h3></td> 
+    </tr>
+
+  <tr>
+      <td><em>7/15/2024</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>1B Andrew Vaughn</strong> to the <u>Conception Bay Dingoes</u> in exchange for <strong>P Casey Mize</strong> and their <strong>5th round pick</strong> in the 2025 draft. </td>
+    </tr> 
+    
     <tr>
     <td><h3><strong>2024 Season</strong></h3></td> 
     </tr>
