--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -25,21 +25,22 @@
   <br>
   <h1><strong>Team Transactions</strong></h1>
   <hr>
+  <br>
+
+  <h2><strong>2025 Season Tranactions</strong></h2> 
+
   <table>
-
-  <tr>
-    <td><h3><strong>2025 Season Tranactions</strong></h3></td> 
-    </tr>
-
+  
   <tr>
       <td><em>11/20/2024</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>1B Andrew Vaughn</strong> to the <u>Conception Bay Dingoes</u> in exchange for <strong>P Casey Mize</strong> and their <strong>5th round pick</strong> in the 2025 draft. </td>
     </tr> 
+  </table>
 
 
-  <tr> 
-      <td><h3><strong>2025 Draft</strong></h3></td>
-      <tr/>
+<h2><strong>2025 Draft</strong></h2>
+
+<table>
     <tr>
       <td><strong>Round</strong></td>
       <td><strong>Postion</strong> </td>
@@ -52,11 +53,11 @@
       <td>Jackson Chourio</td>
     </tr>
 
+</table> 
 
 
-  <tr>
-    <td><h3><strong>Past Season Tranactions</strong></h3></td> 
-    </tr>
+  <h2><strong>Past Season Tranactions</strong></h2>
+   
 
     
     <tr>
