--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -56,14 +56,19 @@
 </table> 
 
 
+<br>
+<br>
+<br>
+
+  
   <h2><strong>Past Season Tranactions</strong></h2>
    
-<Table>
-    
-    <tr>
-    <td><h3><strong>2024 Transactions</strong></h3></td> 
-    </tr>
 
+    
+ 
+<h2><strong>2024 Transactions</strong></h2>
+
+<table>
   <tr>
       <td><em>7/15/2024</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>SS Amed Rosario</strong>, <strong>P Frankie Montas</strong> and their <strong>7th round pick</strong> to the <u>Silverville Rippers</u> in exchange for <strong>SS Oneil Cruz</strong> and <strong>OF Dairon Blanco</strong>. </td>
@@ -113,7 +118,7 @@
 </Table>
 
   
-<h3><strong>2024 Draft</strong></h3>
+<h2><strong>2024 Draft</strong></h2>
 
   <Table>
     <tr>
