--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -53,6 +53,18 @@
       <td>Jackson Chourio</td>
     </tr>
 
+    <tr>
+      <td>2</td>
+      <td>C</td>
+      <td>Adrian Del Castillo</td>
+    </tr>
+
+    <tr>
+      <td>2</td>
+      <td>P</td>
+      <td>Kumar Rocker</td>
+    </tr>
+  
 </table> 
 
 
