--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -64,6 +64,12 @@
       <td>P</td>
       <td>Kumar Rocker</td>
     </tr>
+
+  <tr>
+      <td>3</td>
+      <td>2B</td>
+      <td>Adael Amador</td>
+    </tr>
   
 </table> 
 
