--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -70,6 +70,12 @@
       <td>2B</td>
       <td>Adael Amador</td>
     </tr>
+
+  <tr>
+      <td>4</td>
+      <td>P<td>
+      <td>Zebby Matthews</td>
+    </tr>
   
 </table> 
 
