--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -76,6 +76,18 @@
       <td>P<td>
       <td>Zebby Matthews</td>
     </tr>
+
+ <tr>
+      <td>5</td>
+      <td>P<td>
+      <td>Justin Slaten</td>
+    </tr>
+
+ <tr>
+      <td>5</td>
+      <td>P<td>
+      <td>Yuki Matsui</td>
+    </tr>
   
 </table> 
 
