--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -88,6 +88,13 @@
       <td>P</td>
       <td>Yuki Matsui</td>
     </tr>
+
+ <tr>
+      <td>6</td>
+      <td>C</td>
+      <td>Dillon Dingler</td>
+    </tr>
+
   
 </table> 
 
