Update and rename 2023teambattingstats.html to teambattingstats.html

--- a/teambattingstats.html
+++ b/teambattingstats.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>2023 Team Batting Stats</title>
+    <title>Team Batting Stats</title>
      <link rel="icon" type="image/x-icon" href="Pend Oreille Wampus Cats.jpg">
   </head>
   <body style=backgroundcolor: #FFFBE9;">
@@ -12,15 +12,15 @@
       <tr>
         <td><img src="Pend Oreille Wampus Cats.jpg" alt="" height="75" width="75"></td>
         <td><a href="index.html"> <h3>Main Page</h3></a></td>
-        <td><a href="2023teambattingstats.html"><h3>2023 Team Batting Stats</h3></a></td>
-        <td><a href="2023teampitchingstats.html"><h3>2023 Team Pitching Stats</h3></a></td>
+        <td><a href="teambattingstats.html"><h3>2023 Team Batting Stats</h3></a></td>
+        <td><a href="teampitchingstats.html"><h3>2023 Team Pitching Stats</h3></a></td>
             <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a>
         </td>
             </tr>
     </table>
 <br>
 <br>
-    <h1><center> 2023 Team Batting Stats </center></h1>
+    <h1><center> 2024 Team Batting Stats </center></h1>
 
     <br>
 <br>
