--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ width="250"
 </center></em></h5>
 <br>
 <hr>
-<a href="2023teambattingstats.html"> <h2>2023 Player Batting Stats</h2> </a>
+<a href="teambattingstats.html"> <h2>2023 Player Batting Stats</h2> </a>
 <br>
-<a href="2023teampitchingstats.html"> <h2>2023 Player Pitching Stats</h2> </a>
+<a href="teampitchingstats.html"> <h2>2023 Player Pitching Stats</h2> </a>
 <br>
 <a href="TeamTransactions.html"><h2>Team Transactions</h2> </a>
 
