--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -95,6 +95,12 @@
       <td>Dillon Dingler</td>
     </tr>
 
+ <tr>
+      <td>8</td>
+      <td>P</td>
+      <td>Jairo Iriarte</td>
+    </tr>
+
   
 </table> 
 
