--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -13,8 +13,8 @@
     <tr>
       <td><img src="Pend Oreille Wampus Cats.jpg" alt="" height="75" width="75"></td>
       <td><a href="index.html"> <h3>Main Page</h3></a></td>
-      <td><a href="teambattingstats.html"><h3>2023 Team Batting Stats</h3></a></td>
-      <td><a href="teampitchingstats.html"><h3>2023 Team Pitching Stats</h3></a></td>
+      <td><a href="teambattingstats.html"><h3>Team Batting Stats</h3></a></td>
+      <td><a href="teampitchingstats.html"><h3>Team Pitching Stats</h3></a></td>
  
       <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a>
       </td>
