--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -101,6 +101,12 @@
       <td>Jairo Iriarte</td>
     </tr>
 
+
+ <tr>
+      <td>9</td>
+      <td>P</td>
+      <td>Edgardo Henriquez</td>
+    </tr>
   
 </table> 
 
