--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -107,6 +107,14 @@
       <td>P</td>
       <td>Edgardo Henriquez</td>
     </tr>
+
+ <tr>
+      <td>10</td>
+      <td>3B</td>
+      <td>Graham Pauley</td>
+    </tr>
+  
+
   
 </table> 
 
