--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -121,6 +121,13 @@
       <td>Hunter Feduccia</td>
     </tr>
   
+
+   <tr>
+      <td>12</td>
+      <td>P</td>
+      <td>Will Warren</td>
+    </tr>
+
   
 </table> 
 
