--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -128,6 +128,13 @@
       <td>Will Warren</td>
     </tr>
 
+
+   <tr>
+      <td>13</td>
+      <td>P</td>
+      <td>Fraser Ellard</td>
+    </tr>
+
   
 </table> 
 
