--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -30,7 +30,12 @@
   <h2><strong>2025 Season Tranactions</strong></h2> 
 
   <table>
-  
+
+ <tr>
+      <td><em>12/14/2024</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Enyel De Los Santos</strong>, <strong>P John McMillon</strong>, and their <Strong>2025 15th round pick</Strong>  to the <u>Silverville Rippers</u> in exchange for their <strong>2025 14th round pick</strong>. </td>
+    </tr> 
+    
   <tr>
       <td><em>11/20/2024</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>1B Andrew Vaughn</strong> to the <u>Conception Bay Dingoes</u> in exchange for <strong>P Casey Mize</strong> and their <strong>5th round pick</strong> in the 2025 draft. </td>
@@ -135,6 +140,19 @@
       <td>Fraser Ellard</td>
     </tr>
 
+
+   <tr>
+      <td>14</td>
+      <td>P</td>
+      <td>Clayton Beeter</td>
+    </tr>
+
+     <tr>
+      <td>14</td>
+      <td>OF</td>
+      <td>Pedro Leon</td>
+    </tr>
+  
   
 </table> 
 
