--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -32,6 +32,16 @@
   <table>
 
  <tr>
+      <td><em>01/12/2024</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> cut <strong>P Dinelson Lamet, P Joe La Sorsa, P Jackson Kowar, P Brendan White, P Sammy Peralta, C Austin Nola, C Cesar Salazar, 1B Luken Baker, and 3B Patrick Wisdom</strong>.</td>
+    </tr>   
+    
+ <tr>
+      <td><em>01/12/2025</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Cole Irvin</strong> and <strong>P Alec Marsh</strong> to the <u>Silverville Rippers</u> in exchange for <strong>SS Joey Ortiz</strong>. </td>
+    </tr> 
+    
+ <tr>
       <td><em>12/14/2024</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>P Enyel De Los Santos</strong>, <strong>P John McMillon</strong>, and their <Strong>2025 15th round pick</Strong>  to the <u>Silverville Rippers</u> in exchange for their <strong>2025 14th round pick</strong>. </td>
     </tr> 
