--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -31,6 +31,13 @@
 
   <table>
 
+
+ <tr>
+      <td><em>1/14/2025</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> add <strong>SS Marco Luciano, OF Taylor Trammell, P Erik Sabrowski, P Emilio Pagan, P Mike Burrows </strong> and release <strong>SS Alika Williams, OF Pedro Leon, P Fraser Ellard, 3B Graham Pauley, and P Luis Medina </strong> in Phase III of the TRABL Draft. </td>
+    </tr>   
+
+    
  <tr>
       <td><em>01/12/2024</em></td>
       <td>The <u>Pend Oreille Wampus Cats</u> cut <strong>P Dinelson Lamet, P Joe La Sorsa, P Jackson Kowar, P Brendan White, P Sammy Peralta, C Austin Nola, C Cesar Salazar, 1B Luken Baker, and 3B Patrick Wisdom</strong>.</td>
