--- a/TeamTransactions.html
+++ b/TeamTransactions.html
@@ -31,6 +31,11 @@
 
   <table>
 
+ <tr>
+      <td><em>01/22/2025</em></td>
+      <td>The <u>Pend Oreille Wampus Cats</u> trade <strong>2B Brendan Rodgers</strong> to the <u>Damascus Reapers</u> in exchange for <strong>2B Ronny Mauricio</strong> and the <strong>2026 Damascus 4th round pick </strong>. </td>
+    </tr> 
+    
 
  <tr>
       <td><em>1/14/2025</em></td>
