--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ width="250"
 <a href="teampitchingstats.html"> <h2>2023 Player Pitching Stats</h2> </a>
 <br>
 <a href="TeamTransactions.html"><h2>Team Transactions</h2> </a>
+<br>
+<a href="AlumniCats.html"><h2>Alumni Cats</h2> </a>
 
 <br><br><br><br>
 <h3>Contact Jared Horton</h3>
