--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -33,4 +33,23 @@
     <tr>
       <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/b/b8a36507_mlbam.jpg" alt=""></td>
       <td>Nick Lodolo 2023-Current</td>
-  </table>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/b/b8a36507_mlbam.jpg" alt=""></td>
+      <td>Nick Lodolo 2023-Current</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/b/b8a36507_mlbam.jpg" alt=""></td>
+      <td>Nick Lodolo 2023-Current</td>
+
+
+ </table>
+
+
+  <br>
+
+
+
+
+
+</body>
+
+</html>
