--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -31,17 +31,17 @@
 
     <table>
     <tr>
-      <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/b/b8a36507_mlbam.jpg" alt=""></td>
-      <td>Nick Lodolo 2023-Current</td>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/6/65e6cf19_mlbam.jpg" alt=""></td>
+      <td>Max Muncy 2022</td>
  
-     <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/b/b8a36507_mlbam.jpg" alt=""></td>
-      <td>Nick Lodolo 2023-Current</td>
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/f/f972015e_br_tbd.jpg" alt=""></td>
+      <td>Corey Dickerson 2022</td>
 
-     <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/b/b8a36507_mlbam.jpg" alt=""></td>
-      <td>Nick Lodolo 2023-Current</td>
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/a/a4f0935e_mlbam.jpg" alt=""></td>
+      <td>Jacob DeGrom 2022</td>
 
-       <td><img src="https://www.baseball-reference.com/req/202209210/images/headshots/b/b8a36507_mlbam.jpg" alt=""></td>
-      <td>Nick Lodolo 2023-Current</td>
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/5/5d90e0e1_mlbam.jpg" alt=""></td>
+      <td>Patrick Corbin 2022</td>
 
  </table>
 
