--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -29,6 +29,24 @@
   <hr>
   <br>
 
+
+
+   <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/8/8561fb03_mlbam.jpg" alt=""></td>
+      <td>Ka'ai Tom 2022</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/8/8eb0be4e_br_ari.jpg" alt=""></td>
+      <td>Phil Gosselin 2022</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/f/f143c214_mlbam.jpg" alt=""></td>
+      <td>Cam Gallagher 2022</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/9/9537b4f5_mlbam.jpg" alt=""></td>
+      <td>Lucius Fox 2022</td>
+
+ </table>
+  
     <table>
     <tr>
       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/6/65e6cf19_mlbam.jpg" alt=""></td>
