--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -31,35 +31,67 @@
 
 
 
+    <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/a/a9f038b3_mlbam.jpg" alt=""></td>
+      <td>Jeter Downs 2023</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/1/188f2e67_mlbam.jpg" alt=""></td>
+      <td>Adam Ottavino 2023</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/f/fbc00dba_mlbam.jpg" alt=""></td>
+      <td>Justin Turner 2023</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/3/3f9f1577_mlbam.jpg" alt=""></td>
+      <td>Hunter Renfroe 2023</td>
+
+ </table>
+  
+  <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/8/818131ee_mlbam.jpg" alt=""></td>
+      <td>Garrett Stubbs 2023</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/4/47033146_mlbam.jpg" alt=""></td>
+      <td>Wily Peralta 2023</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/a/a82f954b_mlbam.jpg" alt=""></td>
+      <td>Max Kranick 2023</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/2/295c29d9_mlbam.jpg" alt=""></td>
+      <td>Yermin Mercedes 2023</td>
+
+ </table>
+
   <table>
     <tr>
       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/9/9c316d7f_mlbam.jpg" alt=""></td>
-      <td>Brett Anderson 2022</td>
+      <td>Brett Anderson 2023</td>
  
      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/4/4bb18454_br_sea.jpg" alt=""></td>
-      <td>Wade LeBlanc 2022</td>
+      <td>Wade LeBlanc 2023</td>
 
      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/5/51c62ed4_mlbam.jpg" alt=""></td>
-      <td>Richard Rodriguez 2022</td>
+      <td>Richard Rodriguez 2023</td>
 
        <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/f/fa9f6654_mlbam.jpg" alt=""></td>
-      <td>Sam Clay 2022</td>
+      <td>Sam Clay 2023</td>
 
  </table>
 
 <table>
     <tr>
       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/f/f673af2b_mlbam.jpg" alt=""></td>
-      <td>Craig Stammen 2022</td>
+      <td>Craig Stammen 2023</td>
  
      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/4/4262edec_mlbam.jpg" alt=""></td>
-      <td>Adonis Medina 2022</td>
+      <td>Adonis Medina 2023</td>
 
      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/6/68fc25c1_mlbam.jpg" alt=""></td>
-      <td>Luke Jackson 2022</td>
+      <td>Luke Jackson 2023</td>
 
        <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/a/af717437_mlbam.jpg" alt=""></td>
-      <td>John Curtiss 2022</td>
+      <td>John Curtiss 2023</td>
 
  </table>
 
@@ -67,16 +99,16 @@
   <table>
     <tr>
       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/f/f98adc50_mlbam.jpg" alt=""></td>
-      <td>Yerry Rodriguez 2022</td>
+      <td>Yerry Rodriguez 2023</td>
  
      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/d/d4bacc1d_mlbam.jpg" alt=""></td>
-      <td>Nick Martini 2022</td>
+      <td>Nick Martini 2023</td>
 
      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/d/dbc523a0_br_oak.jpg" alt=""></td>
-      <td>Josh Reddick 2022</td>
+      <td>Josh Reddick 2023</td>
 
        <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/c/c9bc854d_mlbam.jpg" alt=""></td>
-      <td>Jose Peraza 2022</td>
+      <td>Jose Peraza 2023</td>
 
  </table>
   
@@ -84,32 +116,32 @@
    <table>
     <tr>
       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/8/8561fb03_mlbam.jpg" alt=""></td>
-      <td>Ka'ai Tom 2022</td>
+      <td>Ka'ai Tom 2023</td>
  
      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/8/8eb0be4e_br_ari.jpg" alt=""></td>
-      <td>Phil Gosselin 2022</td>
+      <td>Phil Gosselin 2023</td>
 
      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/f/f143c214_mlbam.jpg" alt=""></td>
-      <td>Cam Gallagher 2022</td>
+      <td>Cam Gallagher 2023</td>
 
        <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/9/9537b4f5_mlbam.jpg" alt=""></td>
-      <td>Lucius Fox 2022</td>
+      <td>Lucius Fox 2023</td>
 
  </table>
   
     <table>
     <tr>
       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/6/65e6cf19_mlbam.jpg" alt=""></td>
-      <td>Max Muncy 2022</td>
+      <td>Max Muncy 2023</td>
  
      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/f/f972015e_br_tbd.jpg" alt=""></td>
-      <td>Corey Dickerson 2022</td>
+      <td>Corey Dickerson 2023</td>
 
      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/a/a4f0935e_mlbam.jpg" alt=""></td>
-      <td>Jacob DeGrom 2022</td>
+      <td>Jacob DeGrom 2023</td>
 
        <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/5/5d90e0e1_mlbam.jpg" alt=""></td>
-      <td>Patrick Corbin 2022</td>
+      <td>Patrick Corbin 2023</td>
 
  </table>
 
