--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -31,6 +31,23 @@
 
 
 
+
+    <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/c/c9f82b44_mlbam.jpg" alt=""></td>
+      <td>Joey Bart 2023-24</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/8/81a8de23_mlbam.jpg" alt=""></td>
+      <td>John King 2023-24</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/9/92f8e737_mlbam.jpg" alt=""></td>
+      <td>Alex Cobb 2023-24</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/c/c8553f96_mlbam.jpg" alt=""></td>
+      <td>Trevor Story 2023</td>
+
+ </table>
+  
     <table>
     <tr>
       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/a/a9f038b3_mlbam.jpg" alt=""></td>
