--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -34,6 +34,22 @@
 
     <table>
     <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/6/6e50937c_mlbam.jpg" alt=""></td>
+      <td>Edwin Rios 2023-24</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/e/e6e524b9_mlbam.jpg" alt=""></td>
+      <td>Spenser Watkins 2023-24</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/c/cb42edf8_mlbam.jpg" alt=""></td>
+      <td>Ronel Blanco 2024</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/0/06c9f502_mlbam.jpg" alt=""></td>
+      <td>Aaron Judge 2023-24</td>
+
+ </table>
+  
+    <table>
+    <tr>
       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/c/c9f82b44_mlbam.jpg" alt=""></td>
       <td>Joey Bart 2023-24</td>
  
