--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -34,6 +34,172 @@
 
     <table>
     <tr>
+        <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/4/42abe3dc_mlbam.jpg" alt=""></td>
+      <td>Brendan Rodgers 2023-25</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/4/4147996f_mlbam.jpg" alt=""></td>
+      <td>Alika Williams 2024-25</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/f/f4270aa1_mlbam.jpg" alt=""></td>
+      <td>Pedro Leon 2025</td>
+
+ </table>
+
+
+     <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/1/144e92f1_mlbam.jpg" alt=""></td>
+      <td>Fraser Ellard 2025</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/a/a3dbb4f4_mlbam.jpg" alt=""></td>
+      <td>Graham Pauley 2025</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/c/c01c03f7_mlbam.jpg" alt=""></td>
+      <td>Luis Medina 2024-25</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/9/913c86cb_mlbam.jpg" alt=""></td>
+      <td>Dinelson Lamet 2024-25</td>
+
+ </table>
+
+
+   <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/7/778f1e1a_mlbam.jpg" alt=""></td>
+      <td>Joe La Sorsa 2024-25</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/c/c8328a7e_mlbam.jpg" alt=""></td>
+      <td>Jackson Kowar 2024-25</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/6/6aab81a2_mlbam.jpg" alt=""></td>
+      <td>Brendan White 2024-25</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/2/2eb9427b_mlbam.jpg" alt=""></td>
+      <td>Sammy Peralta 2024-25</td>
+
+ </table>
+
+
+ <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/b/b65585ec_mlbam.jpg" alt=""></td>
+      <td>Austin Nola 2023-25</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/e/e32eff85_mlbam.jpg" alt=""></td>
+      <td>Cesar Salazar 2024-25</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/d/df27aef1_mlbam.jpg" alt=""></td>
+      <td>Luken Baker 2024-25</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/0/04a4f5bc_mlbam.jpg" alt=""></td>
+      <td>Patrick Wisdom 2023-25</td>
+
+ </table>
+  
+
+    <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/3/37f229e2_mlbam.jpg" alt=""></td>
+      <td>Alec Marsh 2024-25</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/e/e3a8ddad_mlbam.jpg" alt=""></td>
+      <td>Cole Irvin 2023-25</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/a/a81a554a_mlbam.jpg" alt=""></td>
+      <td>John McMillon 2024-25</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/5/5c53d301_mlbam.jpg" alt=""></td>
+      <td>Enyel De Los Santos 2023-25</td>
+
+ </table>
+
+
+    <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/b/bbe99c3e_mlbam.jpg" alt=""></td>
+      <td>Andrew Vaughn 2024-25</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/3/33fdfb35_mlbam.jpg" alt=""></td>
+      <td>Amed Rosario 2023-24</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/a/a654630c_mlbam.jpg" alt=""></td>
+      <td>Frankie Montas 2024</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/6/6622f351_mlbam.jpg" alt=""></td>
+      <td>Bryce Elder 2023-24</td>
+
+ </table>
+
+
+    <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/3/3f9bc524_mlbam.jpg" alt=""></td>
+      <td>Blake Perkins 2023-24</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/c/ccc4081f_mlbam.jpg" alt=""></td>
+      <td>Jose Fermin 2024</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/5/575fef01_mlbam.jpg" alt=""></td>
+      <td>Zach Plesac 2023-24</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/e/e9269b87_mlbam.jpg" alt=""></td>
+      <td>Brandon Hughes 2023-24</td>
+
+ </table>
+
+
+   <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/e/e8351f08_mlbam.jpg" alt=""></td>
+      <td>Daniel Hudson 2023-24</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/3/38b545a9_br_tex.jpg" alt=""></td>
+      <td>Tommy Hunter 2023-24</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/9/9cde3f63_mlbam.jpg" alt=""></td>
+      <td>Diego Castillo 2023-24</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/9/90760216_mlbam.jpg" alt=""></td>
+      <td>Brent Headrick 2024</td>
+
+ </table>
+
+  <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/9/9e8503f6_mlbam.jpg" alt=""></td>
+      <td>Jordan Balazovic 2024</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/4/4995ef8f_mlbam.jpg" alt=""></td>
+      <td>Yerry De Los Santos 2023-24</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/3/310a1f36_mlbam.jpg" alt=""></td>
+      <td>Ben Gamel 2023-24</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/5/51b99378_mlbam.jpg" alt=""></td>
+      <td>Luke Williams 2023-24</td>
+
+ </table>
+  
+
+   <table>
+    <tr>
+      <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/f/f095dba3_mlbam.jpg" alt=""></td>
+      <td>Michael Brosseau 2023-24</td>
+ 
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/e/e1a70543_mlbam.jpg" alt=""></td>
+      <td>Brian Serven 2023-24</td>
+
+     <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/d/d19b960b_mlbam.jpg" alt=""></td>
+      <td>Jonathan India 2023-24</td>
+
+       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/a/ab704172_mlbam.jpg" alt=""></td>
+      <td>Yuli Gurriel 2023-24</td>
+
+ </table>
+  
+
+    <table>
+    <tr>
       <td><img src="https://www.baseball-reference.com/req/202412180/images/headshots/6/6e50937c_mlbam.jpg" alt=""></td>
       <td>Edwin Rios 2023-24</td>
  
