--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -348,6 +348,59 @@
   <br>
 
 
+  <br>
+  <h1><strong>The Original 46</strong></h1>
+  <hr>
+  <br>
+<h3> Batters</h3>
+C Yermin Mercedes (Cut)
+C Austin Nola (Cut)
+C Cam Gallagher (Cut)
+C Garrett Stubbs (Cut)
+1B Yuli Gurriel (Traded)
+1B Max Muncy (Traded)
+1B Ka'ai Tom (Cut)
+1B Nick Martini (Cut)
+2B David Bote (Cut)
+3B Mike Brosseau (Cut)
+3B Jose Peraza (Cut)
+3B Justin Turner (Traded)
+3B Patrick Wisdom (Cut)
+SS Trevor Story (Traded)
+SS Sergio Alcantara (Cut)
+OF Aaron Judge (Traded)
+OF Hunter Renfroe (Traded)
+OF Phil Gosselin (Cut)
+OF Corey Dickerson (Traded)
+OF Cody Bellinger- Active Roster
+OF Tyrone Taylor- Active Roster
+OF Josh Reddick (Cut)
+SS Luke Williams (Cut)
+<br>
+<h3> Pitchers</h3>
+SP Cole Irvin (Traded)
+SP Patrick Corbin (Traded)
+SP Zach Plesac (Cut)
+SP Brett Anderson (Cut)
+SP Wily Peralta (Traded)
+SP Alex Cobb (Traded)
+SP Jacob deGrom (Traded)
+SP Spenser Watkins (Traded)
+SP Wade LeBlanc (Cut)
+RP Max Kranick (Cut)
+RP Craig Stammen (Cut)
+RP Richard Rodriguez (Cut)
+RP Luke Jackson (Cut)
+RP Adam Ottavino (Traded)
+RP Daniel Hudson (Cut)
+RP John King (Traded)
+RP Sam Clay (Cut)
+RP John Curtiss (Cut)
+RP Matt Foster (Cut)
+RP Enyel De Los Santos (Traded)
+RP Ryan Thompson- Active Roster
+RP Marcos Diplan (Cut)
+RP Adonis Medina (Cut)
 
 
 
