--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -351,57 +351,62 @@
   <br>
   <h1><strong>The Original 46</strong></h1>
   <hr>
+ The team inherited from the Philly Cheesesteaks
   <br>
-<h3> Batters</h3>
-C Yermin Mercedes (Cut)
-C Austin Nola (Cut)
-C Cam Gallagher (Cut)
-C Garrett Stubbs (Cut)
-1B Yuli Gurriel (Traded)
-1B Max Muncy (Traded)
-1B Ka'ai Tom (Cut)
-1B Nick Martini (Cut)
-2B David Bote (Cut)
-3B Mike Brosseau (Cut)
-3B Jose Peraza (Cut)
-3B Justin Turner (Traded)
-3B Patrick Wisdom (Cut)
-SS Trevor Story (Traded)
-SS Sergio Alcantara (Cut)
-OF Aaron Judge (Traded)
-OF Hunter Renfroe (Traded)
-OF Phil Gosselin (Cut)
-OF Corey Dickerson (Traded)
-OF Cody Bellinger- Active Roster
-OF Tyrone Taylor- Active Roster
-OF Josh Reddick (Cut)
-SS Luke Williams (Cut)
-<br>
-<h3> Pitchers</h3>
-SP Cole Irvin (Traded)
-SP Patrick Corbin (Traded)
-SP Zach Plesac (Cut)
-SP Brett Anderson (Cut)
-SP Wily Peralta (Traded)
-SP Alex Cobb (Traded)
-SP Jacob deGrom (Traded)
-SP Spenser Watkins (Traded)
-SP Wade LeBlanc (Cut)
-RP Max Kranick (Cut)
-RP Craig Stammen (Cut)
-RP Richard Rodriguez (Cut)
-RP Luke Jackson (Cut)
-RP Adam Ottavino (Traded)
-RP Daniel Hudson (Cut)
-RP John King (Traded)
-RP Sam Clay (Cut)
-RP John Curtiss (Cut)
-RP Matt Foster (Cut)
-RP Enyel De Los Santos (Traded)
-RP Ryan Thompson- Active Roster
-RP Marcos Diplan (Cut)
-RP Adonis Medina (Cut)
-
+ <div class="container">
+        <div class="column">
+            <h3>Batters</h3>
+            <p>C Yermin Mercedes (Cut)<br>
+            C Austin Nola (Cut)<br>
+            C Cam Gallagher (Cut)<br>
+            C Garrett Stubbs (Cut)<br>
+            1B Yuli Gurriel (Traded)<br>
+            1B Max Muncy (Traded)<br>
+            1B Ka'ai Tom (Cut)<br>
+            1B Nick Martini (Cut)<br>
+            2B David Bote (Cut)<br>
+            3B Mike Brosseau (Cut)<br>
+            3B Jose Peraza (Cut)<br>
+            3B Justin Turner (Traded)<br>
+            3B Patrick Wisdom (Cut)<br>
+            SS Trevor Story (Traded)<br>
+            SS Sergio Alcantara (Cut)<br>
+            OF Aaron Judge (Traded)<br>
+            OF Hunter Renfroe (Traded)<br>
+            OF Phil Gosselin (Cut)<br>
+            OF Corey Dickerson (Traded)<br>
+            OF Cody Bellinger - Active Roster<br>
+            OF Tyrone Taylor - Active Roster<br>
+            OF Josh Reddick (Cut)<br>
+            SS Luke Williams (Cut)</p>
+        </div>
+        <div class="column">
+            <h3>Pitchers</h3>
+            <p>SP Cole Irvin (Traded)<br>
+            SP Patrick Corbin (Traded)<br>
+            SP Zach Plesac (Cut)<br>
+            SP Brett Anderson (Cut)<br>
+            SP Wily Peralta (Traded)<br>
+            SP Alex Cobb (Traded)<br>
+            SP Jacob deGrom (Traded)<br>
+            SP Spenser Watkins (Traded)<br>
+            SP Wade LeBlanc (Cut)<br>
+            RP Max Kranick (Cut)<br>
+            RP Craig Stammen (Cut)<br>
+            RP Richard Rodriguez (Cut)<br>
+            RP Luke Jackson (Cut)<br>
+            RP Adam Ottavino (Traded)<br>
+            RP Daniel Hudson (Cut)<br>
+            RP John King (Traded)<br>
+            RP Sam Clay (Cut)<br>
+            RP John Curtiss (Cut)<br>
+            RP Matt Foster (Cut)<br>
+            RP Enyel De Los Santos (Traded)<br>
+            RP Ryan Thompson - Active Roster<br>
+            RP Marcos Diplan (Cut)<br>
+            RP Adonis Medina (Cut)</p>
+        </div>
+    </div>
 
 
 </body>
