--- a/teampitchingstats.html
+++ b/teampitchingstats.html
@@ -15,9 +15,8 @@
         <td><a href="index.html"> <h3>Main Page</h3></a></td>
         <td><a href="teambattingstats.html"><h3>Team Batting Stats</h3></a></td>
         <td><a href="teampitchingstats.html"><h3>Team Pitching Stats</h3></a></td>
-      
-        <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a>
-        </td>
+        <td><a href="TeamTransactions.html"><h3>Team Transactions</h3></a> </td>
+         <td><a href="AlumniCats.html"><h3>Alumni Cats</h3></a></td>
             </tr>
     </table>
     <br>
