--- a/AlumniCats.html
+++ b/AlumniCats.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Team Transactions</title>
+  <title>Alumni Cats</title>
  <link rel="icon" type="image/x-icon" href="Pend Oreille Wampus Cats.jpg">
   
 </head>
